--- a/cmd/ctl/BUILD.bazel
+++ b/cmd/ctl/BUILD.bazel
@@ -33,8 +33,10 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//cmd/ctl/cmd:all-srcs",
+        "//cmd/ctl/pkg/approve:all-srcs",
         "//cmd/ctl/pkg/convert:all-srcs",
         "//cmd/ctl/pkg/create:all-srcs",
+        "//cmd/ctl/pkg/deny:all-srcs",
         "//cmd/ctl/pkg/inspect:all-srcs",
         "//cmd/ctl/pkg/renew:all-srcs",
         "//cmd/ctl/pkg/status:all-srcs",
