--- a/pkg/internal/api/validation/BUILD.bazel
+++ b/pkg/internal/api/validation/BUILD.bazel
@@ -16,8 +16,8 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = ["registry_test.go"],
-    embed = [":go_default_library"],
     deps = [
+        ":go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/internal/apis/certmanager:go_default_library",
         "//pkg/webhook:go_default_library",
